# writio

./: .bumpversion.cfg  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  tests.yml
src/writio/: __init__.py
tests/: conftest.py
tests/data/: .~lock.test.tsv#  recs.yaml  test.csv  test.json  test.tsv
