[tool.poetry]
name = "writio"
version = "0.0.2.dev"
description = "A file reading and writing library for `.csv`, `.yaml`, and `.json` files. You probably shouldn't use this."
authors = ["Florian Matter <flmt@mailbox.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
